--- a/bank.html
+++ b/bank.html
@@ -73,7 +73,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Курс/Конвертер валют*</span></div>
+                <div class="group-title"><span class="badge badge-success">Курс/Конвертер валют</span></div>
                 <ul>
                   <li>
                     <div class="icon finance i ua"></div><a href="https://finance.i.ua/" target="_blank">finance.i.ua</a>
@@ -87,7 +87,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Обмен валют*</span></div>
+                <div class="group-title"><span class="badge badge-success">Обмен валют</span></div>
                 <ul>
                   <li>
                     <div class="icon bestchange ru"></div><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a>
@@ -104,7 +104,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Рейтинг банков Украины*</span></div>
+                <div class="group-title"><span class="badge badge-success">Рейтинг банков Украины</span></div>
                 <ul>
                   <li>
                     <div class="icon minfin com ua"></div><a href="https://minfin.com.ua/ua/banks/rating/" target="_blank">minfin.com.ua</a>
@@ -120,7 +120,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Банк/Банк ОНЛАЙН*</span></div>
+                <div class="group-title"><span class="badge badge-success">Банк/Банк ОНЛАЙН</span></div>
                 <ul>
                   <li>
                     <div class="icon privatbank ua"></div><a href="https://privatbank.ua/ru" target="_blank">privatbank.ua</a>
@@ -155,7 +155,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Страхование/Кредит/Финансы*</span></div>
+                <div class="group-title"><span class="badge badge-success">Страхование/Кредит/Финансы</span></div>
                 <ul>
                   <li>
                     <div class="icon alfabank ua"></div><a href="https://letyshops.com/r/alfa-bank-ukraina-4qh7st5ct0ys4s" target="_blank">alfabank.ua`</a>
@@ -177,7 +177,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Интернет КОШЕЛЕК*</span></div>
+                <div class="group-title"><span class="badge badge-success">Интернет КОШЕЛЕК</span></div>
                 <ul>
                   <li>
                     <div class="icon payoneer com"></div><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer.com`</a>
