--- a/communal.html
+++ b/communal.html
@@ -73,7 +73,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">*Легкие-оплаты*</span></div>
+                <div class="group-title"><span class="badge badge-warning">Легкие-оплаты</span></div>
                 <ul>
                   <li>
                     <div class="icon portmone com ua"></div><a href="https://www.portmone.com.ua/" target="_blank">portmone</a><span class="opisi">Платежная система</span>
@@ -81,7 +81,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*ГАЗ*</span></div>
+                <div class="group-title"><span class="badge badge-success">ГАЗ</span></div>
                 <ul>
                   <li>
                     <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.газ</span>
@@ -101,7 +101,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Электроэнергия*</span></div>
+                <div class="group-title"><span class="badge badge-success">Электроэнергия</span></div>
                 <ul>
                   <li>
                     <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.электр.</span>
@@ -118,7 +118,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Вода*</span></div>
+                <div class="group-title"><span class="badge badge-success">Вода</span></div>
                 <ul>
                   <li>
                     <div class="icon maanimo com"></div><a href="https://maanimo.com/indexes/140162-tarify-na-vodu-dlya-naseleniya-v-ukraine" target="_blank">maanimo.com</a><span class="opisi">Цена.вода.Укр.</span>
@@ -126,7 +126,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Отопление*</span></div>
+                <div class="group-title"><span class="badge badge-success">Отопление</span></div>
                 <ul>
                   <li>
                     <div class="icon maanimo com"></div><a href="https://maanimo.com/indexes/142540-tarify-na-otoplenie-v-ukraine-sezon-2017-2018" target="_blank">maanimo.com</a><span class="opisi">Цена.отопл.Укр.</span>
@@ -136,7 +136,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Интернет-кабельний*</span></div>
+                <div class="group-title"><span class="badge badge-success">Интернет-кабельний</span></div>
                 <ul>
                   <li>
                     <div class="icon ukrtelecom ua"></div><a href="https://new.ukrtelecom.ua/internet/" target="_blank">ukrtelecom</a><span class="opisi">ТАРИФЫ</span>
@@ -159,7 +159,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Интернет-мобильный*</span></div>
+                <div class="group-title"><span class="badge badge-success">Интернет-мобильный</span></div>
                 <ul>
                   <li>
                     <div class="icon kyivstar ua"></div><a href="https://kyivstar.ua/" target="_blank">kyivstar.ua</a>
@@ -196,7 +196,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*ИНФО от minfin.com.ua*</span></div>
+                <div class="group-title"><span class="badge badge-success">ИНФО от minfin.com.ua</span></div>
                 <ul>
                   <li>
                     <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/labour/salary/min/" target="_blank">Миним.зараб.плата</a>
@@ -213,7 +213,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*ИНФО другое*</span></div>
+                <div class="group-title"><span class="badge badge-success">ИНФО другое</span></div>
                 <ul>
                   <li>
                     <div class="icon buhoblik org ua"></div><a href="http://www.buhoblik.org.ua/kadry-zarplata/pensii/2827-2827-minimalnaya-pensiya.html" target="_blank">Миним.пенсия.в.Украине</a>
