--- a/games.html
+++ b/games.html
@@ -73,7 +73,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Азартные*</span></div>
+                <div class="group-title"><span class="badge badge-success">Азартные</span></div>
                 <ul>
                   <li>
                     <div class="icon playset ru"></div><a href="http://www.playset.ru/" target="_blank">playset.ru</a>
@@ -90,7 +90,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Логические*</span></div>
+                <div class="group-title"><span class="badge badge-success">Логические</span></div>
                 <ul>
                   <li>
                     <div class="icon zumagames ru"></div><a href="http://www.zumagames.ru/" target="_blank">zumagames.ru</a>
@@ -104,7 +104,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Для КОМПА*</span></div>
+                <div class="group-title"><span class="badge badge-success">Для КОМПА</span></div>
                 <ul>
                   <li>
                     <div class="icon wargaming net"></div><a href="https://ru.wargaming.net/" target="_blank">wargaming.net</a>
@@ -118,7 +118,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Инфо ТОП*</span></div>
+                <div class="group-title"><span class="badge badge-success">Инфо ТОП</span></div>
                 <ul>
                   <li>
                     <div class="icon onlimegames ru"></div><a href="https://onlimegames.ru/games/top100" target="_blank">onlimegames.ru=top100</a>
@@ -137,7 +137,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Онлайн для детей*</span></div>
+                <div class="group-title"><span class="badge badge-success">Онлайн для детей</span></div>
                 <ul>
                   <li>
                     <div class="icon poki com"></div><a href="https://poki.com/ru" target="_blank">poki.com</a>
@@ -168,7 +168,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Букмекерская контора - СНГ*</span></div>
+                <div class="group-title"><span class="badge badge-success">Букмекерская контора - СНГ</span></div>
                 <ul>
                   <li>
                     <div class="icon fan-sport com ua"></div><a href="https://fan-sport.com.ua?bf=5c6990af5f28e_515561215" target="_blank">fan-sport.com.ua`</a>
@@ -191,7 +191,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Букмекерская контора - Европа*</span></div>
+                <div class="group-title"><span class="badge badge-success">Букмекерская контора - Европа</span></div>
                 <ul>
                   <li>
                     <div class="icon pinnacle com"></div><a href="https://www.pinnacle.com/ru/" target="_blank">pinnacle.com</a>
