--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Поиск/Перевод/Граматика*</span></div>
+                <div class="group-title"><a href="/others.html"><span class="badge badge-dark">Поиск/Перевод/Граматика</span></a></div>
                 <ul>
                   <li>
                     <div class="google icon"></div><a href="https://www.google.com.ua/" target="_blank">Поиск Google</a>
@@ -93,7 +93,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Социум*</span></div>
+                <div class="group-title"><a href="/social.html"><span class="badge badge-dark">Социум</span></a></div>
                 <ul>
                   <li>
                     <div class="icon facebook com"></div><a href="https://www.facebook.com/" target="_blank">Facebook.com</a>
@@ -122,7 +122,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Новости*</span></div>
+                <div class="group-title"><a href="/news.html"><span class="badge badge-dark">Новости</span></a></div>
                 <ul>
                   <li>
                     <div class="icon ukr net"></div><a href="https://www.ukr.net/" target="_blank">Ukr.net</a>
@@ -148,7 +148,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Медиа*</span></div>
+                <div class="group-title"><a href="/media.html"><span class="badge badge-dark">Медиа</span></a></div>
                 <ul>
                   <li>
                     <div class="icon youtube"></div><a href="https://www.youtube.com/" target="_blank">Youtube</a>
@@ -171,12 +171,18 @@
                   <li>
                     <div class="icon zaycev fm"></div><a href="https://www.zaycev.fm/" target="_blank">zaycev.fm</a>
                   </li>
+                  <li>
+                    <!-- тут реклама от ГУГЛ-->
+                    <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:234px;height:60px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="4257475217"></ins>
+                    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+                    <!-- тут реклама от ГУГЛ-->
+                  </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Игры*</span></div>
+                <div class="group-title"><a href="/games.html"><span class="badge badge-dark">Игры</span></a></div>
                 <ul>
                   <li>
                     <div class="icon playset ru"></div><a href="http://www.playset.ru/" target="_blank">playset.ru</a>
@@ -199,7 +205,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Игры/Букмек.конторы*</span></div>
+                <div class="group-title"><a href="/games.html"><span class="badge badge-dark">Игры/Букмек.конторы</span></a></div>
                 <ul>
                   <li>
                     <div class="icon fan-sport com ua"></div><a href="https://fan-sport.com.ua?bf=5c6990af5f28e_515561215" target="_blank">fan-sport.com.ua`</a>
@@ -210,7 +216,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Комуналка*</span></div>
+                <div class="group-title"><a href="/communal.html"><span class="badge badge-dark">Комуналка</span></a></div>
                 <ul>
                   <li>
                     <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com</a><span class="opisi">оф.цена.газ</span>
@@ -239,7 +245,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Банкинг*</span></div>
+                <div class="group-title"><a href="/bank.html"><span class="badge badge-dark">Банкинг</span></a></div>
                 <ul>
                   <li>
                     <div class="icon privat24 ua"></div><a href="https://www.privat24.ua/" target="_blank">privat24.ua</a><span class="opisi">Онлайн</span>
@@ -265,12 +271,18 @@
                   <li>
                     <div class="icon bestchange ru"></div><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмен валют</span>
                   </li>
+                  <li>
+                    <!-- тут реклама от ГУГЛ-->
+                    <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:234px;height:60px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="4257475217"></ins>
+                    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+                    <!-- тут реклама от ГУГЛ-->
+                  </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Отследить посылку*</span></div>
+                <div class="group-title"><a href="/market.html"><span class="badge badge-dark">Отследить посылку</span></a></div>
                 <ul>
                   <li>
                     <div class="icon novaposhta ua"></div><a href="https://novaposhta.ua/ru/tracking" target="_blank">novaposhta.ua</a>
@@ -281,7 +293,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Рынок*</span></div>
+                <div class="group-title"><a href="/market.html"><span class="badge badge-dark">Рынок</span></a></div>
                 <ul>
                   <li>
                     <div class="icon olx ua"></div><a href="https://www.olx.ua/" target="_blank">olx.ua</a>
@@ -301,7 +313,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Магазины*</span></div>
+                <div class="group-title"><a href="/shops.html"><span class="badge badge-dark">Магазины</span></a></div>
                 <ul>
                   <li>
                     <div class="icon letyshops com"></div><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops`</a><span class="opisi">Все дешевле</span>
@@ -333,7 +345,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Другое*</span></div>
+                <div class="group-title"><a href="/others.html"><span class="badge badge-dark">Другое</span></a></div>
                 <ul>
                   <li>
                     <div class="icon speed2"></div><a href="http://speedtest.ukrtelecom.ua/" target="_blank">speedtest.ukrtelecom.ua</a>
@@ -360,12 +372,18 @@
                   <li>
                     <div class="icon vshkole com"></div><a href="https://vshkole.com/" target="_blank">vshkole</a><span class="opisi">ГДЗ/учебники</span>
                   </li>
+                  <li>
+                    <!-- тут реклама от ГУГЛ-->
+                    <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:234px;height:60px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="4257475217"></ins>
+                    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+                    <!-- тут реклама от ГУГЛ-->
+                  </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-dark">*Городок/Новомиргород*</span></div>
+                <div class="group-title"><a href="/city.html"><span class="badge badge-dark">Городок/Новомиргород</span></a></div>
                 <ul>
                   <li>
                     <div class="icon google maps"></div><a href="https://www.google.com/maps/place/%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4,+%D0%9A%D1%96%D1%80%D0%BE%D0%B2%D0%BE%D0%B3%D1%80%D0%B0%D0%B4%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@48.7981251,31.5591162,12z/data=!3m1!4b1!4m5!3m4!1s0x40d1a5b80c2c8cdf:0x27e2a212ccc7175c!8m2!3d48.7907203!4d31.6582633" target="_blank">Карта Новомиргорода</a>
@@ -404,22 +422,28 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-danger">Обнова в закладках: v.2019-03-13</span></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/"><span class="badge badge-danger">Обнова в закладках: v.2019-03-13</span></a></div>
                 <ul>
                   <li>
                     <div class="icon florium ua"></div>
                     <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a>
-                    <div class="icontooinfo a0info-opis1" title="Раздел-Магазины. Флориум - Интернет магазин семян, саженцев садовых, комнатных растений и цветов в Украине." alt=""></div>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Флориум - Интернет магазин семян, саженцев садовых, комнатных растений и цветов в Украине." alt=""></div>
                   </li>
                   <li>
                     <div class="icon med-magazin ua"></div>
                     <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c" target="_blank">med-magazin.ua`</a>
-                    <div class="icontooinfo a0info-opis6" title="Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине" alt=""></div>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине" alt=""></div>
                   </li>
                   <li>
                     <div class="icon master-plus com ua"></div>
                     <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс" alt=""></div>
+                  </li>
+                  <li>
+                    <!-- тут реклама от ГУГЛ-->
+                    <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:250px;height:360px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="8204636692"></ins>
+                    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+                    <!-- тут реклама от ГУГЛ-->
                   </li>
                 </ul>
               </div>
