--- a/market.html
+++ b/market.html
@@ -73,7 +73,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">*Отследить посылку (по почте)*</span></div>
+                <div class="group-title"><span class="badge badge-warning">Отследить посылку (по почте)</span></div>
                 <ul>
                   <li>
                     <div class="icon novaposhta ua"></div><a href="https://novaposhta.ua/ru/tracking" target="_blank">novaposhta.ua</a>
@@ -90,7 +90,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">*Безопасность-база мошенников*</span></div>
+                <div class="group-title"><span class="badge badge-warning">Безопасность-база мошенников</span></div>
                 <ul>
                   <li>
                     <div class="icon bazaukraferistov com"></div><a href="http://bazaukraferistov.com/" target="_blank">bazaukraferistov.com</a>
@@ -115,7 +115,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Доска объявлений-ВСЯКОЕ*</span></div>
+                <div class="group-title"><span class="badge badge-success">Доска объявлений-ВСЯКОЕ</span></div>
                 <ul>
                   <li>
                     <div class="icon olx ua"></div><a href="https://www.olx.ua/" target="_blank">olx.ua</a>
@@ -135,7 +135,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Доска объявлений-ОДЕЖДА/ОБУВЬ*</span></div>
+                <div class="group-title"><span class="badge badge-success">Доска объявлений-ОДЕЖДА/ОБУВЬ</span></div>
                 <ul>
                   <li>
                     <div class="icon shafa ua"></div><a href="https://shafa.ua/" target="_blank">shafa.ua</a>
@@ -146,7 +146,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Доска объявлений-АВТО/МОТО*</span></div>
+                <div class="group-title"><span class="badge badge-success">Доска объявлений-АВТО/МОТО</span></div>
                 <ul>
                   <li>
                     <div class="icon auto ria com"></div><a href="https://auto.ria.com/" target="_blank">auto.ria.com</a>
@@ -159,7 +159,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Работа в Украине*</span></div>
+                <div class="group-title"><span class="badge badge-success">Работа в Украине</span></div>
                 <ul>
                   <li>
                     <div class="icon work ua"></div><a href="https://www.work.ua/" target="_blank">work.ua</a>
@@ -170,7 +170,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Торговые площадки*</span></div>
+                <div class="group-title"><span class="badge badge-success">Торговые площадки</span></div>
                 <ul>
                   <li>
                     <div class="icon prom ua"></div><a href="https://prom.ua/" target="_blank">prom.ua</a>
@@ -181,7 +181,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Аукционы*</span></div>
+                <div class="group-title"><span class="badge badge-success">Аукционы</span></div>
                 <ul>
                   <li>
                     <div class="icon skylots org"></div><a href="https://skylots.org/" target="_blank">skylots.org</a>
