--- a/media.html
+++ b/media.html
@@ -73,7 +73,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Ваше любимое видео!*</span></div>
+                <div class="group-title"><span class="badge badge-success">Ваше любимое видео!</span></div>
                 <ul>
                   <li>
                     <div class="icon youtube"></div><a href="https://www.youtube.com/" target="_blank">youtube.com</a>
@@ -81,7 +81,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*ТВ онлайн*</span></div>
+                <div class="group-title"><span class="badge badge-success">ТВ онлайн</span></div>
                 <ul>
                   <li>
                     <div class="icon viks tv"></div><a href="http://viks.tv/" target="_blank">viks.tv</a>
@@ -98,7 +98,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Кинотеатры*</span></div>
+                <div class="group-title"><span class="badge badge-success">Кинотеатры</span></div>
                 <ul>
                   <li>
                     <div class="icon megogo net"></div><a href="https://megogo.net/ru" target="_blank">megogo.net</a>
@@ -111,7 +111,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Все о Кино*</span></div>
+                <div class="group-title"><span class="badge badge-success">Все о Кино</span></div>
                 <ul>
                   <li>
                     <div class="icon kinopoisk ru"></div><a href="https://www.kinopoisk.ru/" target="_blank">kinopoisk.ru</a>
@@ -119,7 +119,7 @@
                   </li>
                 </ul>
                 <div class="group">
-                  <div class="group-title"><span class="badge badge-success">*Сериалы онлайн*</span></div>
+                  <div class="group-title"><span class="badge badge-success">Сериалы онлайн</span></div>
                 </div>
                 <ul>
                   <li>
@@ -131,7 +131,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Фильмы онлайн*</span></div>
+                <div class="group-title"><span class="badge badge-success">Фильмы онлайн</span></div>
                 <ul>
                   <li>
                     <div class="icon kinokrad co"></div><a href="http://kinokrad.co/" target="_blank">kinokrad.co</a>
@@ -156,7 +156,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Радио онлайн*</span></div>
+                <div class="group-title"><span class="badge badge-success">Радио онлайн</span></div>
                 <ul>
                   <li>
                     <div class="icon onlineradiobox com"></div><a href="https://onlineradiobox.com/ua/" target="_blank">onlineradiobox.com</a>
@@ -170,7 +170,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Музыка онлайн*</span></div>
+                <div class="group-title"><span class="badge badge-success">Музыка онлайн</span></div>
                 <ul>
                   <li>
                     <div class="icon zaycev fm"></div><a href="https://www.zaycev.fm/" target="_blank">zaycev.fm</a>
@@ -199,7 +199,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Музыка СКАЧАТЬ*</span></div>
+                <div class="group-title"><span class="badge badge-success">Музыка СКАЧАТЬ</span></div>
                 <ul>
                   <li>
                     <div class="icon xtremex3 com"></div><a href="http://xtremex3.com/" target="_blank">xtremex3.com</a>
