--- a/news.html
+++ b/news.html
@@ -73,7 +73,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Новости*</span></div>
+                <div class="group-title"><span class="badge badge-success">Новости</span></div>
                 <ul>
                   <li>
                     <div class="icon ukr net"></div><a href="https://www.ukr.net/" target="_blank">Ukr.net</a>
@@ -141,7 +141,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Всякое*</span></div>
+                <div class="group-title"><span class="badge badge-success">Всякое</span></div>
                 <ul>
                   <li>
                     <div class="icon sis at ua"></div><a href="http://sis.at.ua/" target="_blank">Нужные ШТУЧКИ!</a>
@@ -154,7 +154,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Новости спорта*</span></div>
+                <div class="group-title"><span class="badge badge-success">Новости спорта</span></div>
                 <ul>
                   <li>
                     <div class="icon myscore com ua"></div><a href="https://www.myscore.com.ua/" target="_blank">myscore.com.ua</a>
@@ -177,7 +177,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Новости на Youtube*</span></div>
+                <div class="group-title"><span class="badge badge-success">Новости на Youtube</span></div>
                 <ul>
                   <li>
                     <div class="icon youtube"></div><a href="https://www.youtube.com/user/tsnukraine/videos" target="_blank">Youtube_ТСН</a>
@@ -200,7 +200,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*online-Новости на Youtube*</span></div>
+                <div class="group-title"><span class="badge badge-success">online-Новости на Youtube</span></div>
                 <ul>
                   <li>
                     <div class="icon youtube"></div><a href="https://www.youtube.com/channel/UCj4dH8kfRQFey9MYSENPNaQ" target="_blank">online_112 Украина</a>
@@ -234,7 +234,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Органы государственной власти Украины*</span></div>
+                <div class="group-title"><span class="badge badge-success">Органы государственной власти Украины</span></div>
                 <ul>
                   <li>
                     <div class="icon president gov ua"></div><a href="https://www.president.gov.ua/" target="_blank">Президент України</a>
@@ -251,7 +251,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Другие органы и министерства*</span></div>
+                <div class="group-title"><span class="badge badge-success">Другие органы и министерства</span></div>
                 <ul>
                   <li>
                     <div class="icon minagro gov ua"></div><a href="http://www.minagro.gov.ua/" target="_blank">Мін. аграрної політики та продов.</a>
