--- a/programs.html
+++ b/programs.html
@@ -73,8 +73,8 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title">
-                  <div class="badge badge-danger">Пароль на архивы: zakladki2019</div><span class="badge badge-warning">*Торрент-программы*</span>
+                <div class="group-title prog-title">
+                  <div class="badge badge-danger">Пароль на архивы: zakladki2019</div><span class="badge badge-warning">Торрент-программы</span>
                 </div>
               </div>
               <ul>
@@ -86,7 +86,7 @@
                 </li>
               </ul>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">*Загрузить мессенджеры*</span></div>
+                <div class="group-title"><span class="badge badge-warning">Загрузить мессенджеры</span></div>
               </div>
               <ul>
                 <li>
@@ -102,7 +102,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">*Удаленное управление компютером*</span></div>
+                <div class="group-title"><span class="badge badge-warning">Удаленное управление компютером</span></div>
               </div>
               <ul>
                 <li>
@@ -121,7 +121,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">*Для N.O.D.32 продление лицензии*</span></div>
+                <div class="group-title"><span class="badge badge-warning">Для N.O.D.32 продление лицензии</span></div>
               </div>
               <ul>
                 <li>
