--- a/shops.html
+++ b/shops.html
@@ -73,7 +73,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">*Возврат % с покупок*</span></div>
+                <div class="group-title"><span class="badge badge-warning">Возврат % с покупок</span></div>
                 <ul>
                   <li>
                     <div class="icon letyshops com"></div><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops`</a><span class="opisi">30%дешевле</span>
@@ -87,7 +87,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">*Анализатор покупок*</span></div>
+                <div class="group-title"><span class="badge badge-warning">Анализатор покупок</span></div>
                 <ul>
                   <li>
                     <div class="icon hotline ua"></div><a href="https://hotline.ua/" target="_blank">hotline.ua</a>
@@ -101,7 +101,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">*Отзывник покупок*</span></div>
+                <div class="group-title"><span class="badge badge-warning">Отзывник покупок</span></div>
                 <ul>
                   <li>
                     <div class="icon otzyvua net"></div><a href="https://www.otzyvua.net/" target="_blank">otzyvua.net</a>
@@ -115,7 +115,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">*Помощник покупок ЗАРУБЕЖ*</span></div>
+                <div class="group-title"><span class="badge badge-warning">Помощник покупок ЗАРУБЕЖ</span></div>
                 <ul>
                   <li>
                     <div class="icon pokupayko com"></div><a href="https://pokupayko.com/" target="_blank">pokupayko.com</a>
@@ -128,7 +128,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Зарубежные*</span></div>
+                <div class="group-title"><span class="badge badge-success">Зарубежные</span></div>
                 <ul>
                   <li>
                     <div class="icon best aliexpress com"></div><a href="https://letyshops.com/r/aliexpress-4qh7st5csx0k4c" target="_blank">best.aliexpress.com`</a>
@@ -139,7 +139,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Любые ТОВАРЫ!*</span></div>
+                <div class="group-title"><span class="badge badge-success">Любые ТОВАРЫ!</span></div>
                 <ul>
                   <li>
                     <div class="icon rozetka com ua"></div><a href="https://letyshops.com/r/rozetka-4qh7st5csxa88w" target="_blank">rozetka.com.ua`</a>
@@ -181,7 +181,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Автотовары*</span></div>
+                <div class="group-title"><span class="badge badge-success">Автотовары</span></div>
                 <ul>
                   <li>
                     <div class="icon avtozvuk ua"></div><a href="https://letyshops.com/r/baza-avtozvuka-4qh7st5csyassk" target="_blank">avtozvuk.ua`</a>
@@ -203,7 +203,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Одежда/Обувь/Аксессуары*</span></div>
+                <div class="group-title"><span class="badge badge-success">Одежда/Обувь/Аксессуары</span></div>
                 <ul>
                   <li>
                     <div class="icon bonprix ua"></div><a href="https://letyshops.com/r/bonprix-ua-4qh7st5csygwc8" target="_blank">bonprix.ua`</a>
@@ -223,7 +223,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Детские товары*</span></div>
+                <div class="group-title"><span class="badge badge-success">Детские товары</span></div>
                 <ul>
                   <li>
                     <div class="icon spok ua"></div><a href="https://letyshops.com/r/spok-ua-4qh7st5cszk0go" target="_blank">spok.ua`</a>
@@ -243,7 +243,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Косметика/Парфюмерия/Ювелир*</span></div>
+                <div class="group-title"><span class="badge badge-success">Косметика/Парфюмерия/Ювелир</span></div>
                 <ul>
                   <li>
                     <div class="icon yves-rocher ua"></div><a href="https://letyshops.com/r/yves-rocher-ua-4qh7st5csyyo0k" target="_blank">yves-rocher.ua`</a>
@@ -277,7 +277,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Здоровье*</span></div>
+                <div class="group-title"><span class="badge badge-success">Здоровье</span></div>
                 <ul>
                   <li>
                     <div class="icon apteka911 com ua"></div><a href="https://letyshops.com/r/apteka-911-4qh7st5ct08woo" target="_blank">apteka911.com.ua`</a>
@@ -294,7 +294,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Сад/Огород*</span></div>
+                <div class="group-title"><span class="badge badge-success">Сад/Огород</span></div>
                 <ul>
                   <li>
                     <div class="icon florium ua"></div><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a>
@@ -302,7 +302,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Образование (изучение языков)*</span></div>
+                <div class="group-title"><span class="badge badge-success">Образование (изучение языков)</span></div>
                 <ul>
                   <li>
                     <div class="icon lingualeo com"></div><a href="https://letyshops.com/r/lingualeo-4qh7st5ct0u8cw" target="_blank">lingualeo.com`</a>
@@ -313,7 +313,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Книги*</span></div>
+                <div class="group-title"><span class="badge badge-success">Книги</span></div>
                 <ul>
                   <li>
                     <div class="icon yakaboo ua"></div><a href="https://letyshops.com/r/yakaboo-4qh7st5cszy8k4" target="_blank">yakaboo.ua`</a>
@@ -333,7 +333,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Путешествие/Отдых*</span></div>
+                <div class="group-title"><span class="badge badge-success">Путешествие/Отдых</span></div>
                 <ul>
                   <li>
                     <div class="icon aviasales ru"></div><a href="https://letyshops.com/r/aviasalesru-4qh7st5ct0g08c" target="_blank">aviasales.ru`</a>
