--- a/social.html
+++ b/social.html
@@ -73,7 +73,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">*Загрузить мессенджеры*</span></div>
+                <div class="group-title"><span class="badge badge-warning">Загрузить мессенджеры</span></div>
                 <ul>
                   <li>
                     <div class="icon telegram"></div><a href="https://tlgrm.ru/apps" target="_blank">Скачать TELEGRAM</a>
@@ -85,18 +85,17 @@
                     <div class="icon skype"></div><a href="https://www.skype.com/ru/get-skype/" target="_blank">Скачать SKYPE</a>
                   </li>
                   <li>
-                    <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                  </li>
-                  <li><ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="7850904161"></ins></li>
-                  <li>
+                    <!-- тут реклама от ГУГЛ - 3 колонки-вконце 336-280-->
+                    <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="7850904161"></ins>
                     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+                    <!-- тут реклама от ГУГЛ-->
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Социальные сети - Зарубеж*</span></div>
+                <div class="group-title"><span class="badge badge-success">Социальные сети - Зарубеж</span></div>
                 <ul>
                   <li>
                     <div class="icon facebook com"></div><a href="https://www.facebook.com/" target="_blank">Facebook.com</a>
@@ -116,7 +115,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Социальные сети - Россия*</span></div>
+                <div class="group-title"><span class="badge badge-success">Социальные сети - Россия</span></div>
                 <ul>
                   <li>
                     <div class="icon vk com"></div><a href="https://vk.com/" target="_blank">ВКонтакте</a>
@@ -129,7 +128,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Социальные сети - Украина*</span></div>
+                <div class="group-title"><span class="badge badge-success">Социальные сети - Украина</span></div>
                 <ul>
                   <li>
                     <div class="icon ukrface com ua"></div><a href="https://ukrface.com.ua/reg502400" target="_blank">Ukrface.com.ua`</a>
@@ -150,18 +149,17 @@
                     <div class="icon odnogrupniki com ua"></div><a href="https://odnogrupniki.com.ua/reg32138" target="_blank">Odnogrupniki.com.ua`</a>
                   </li>
                   <li>
-                    <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                  </li>
-                  <li><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="1111124042"></ins></li>
-                  <li>
+                    <!-- тут реклама от ГУГЛ - 3 колонки 32050+-->
+                    <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="1111124042"></ins>
                     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+                    <!-- тут реклама от ГУГЛ-->
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Электронная почта - Зарубеж*</span></div>
+                <div class="group-title"><span class="badge badge-success">Электронная почта - Зарубеж</span></div>
                 <ul>
                   <li>
                     <div class="icon gmail"></div><a href="https://mail.google.com" target="_blank">gmail</a>
@@ -178,7 +176,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Электронная почта - Россия*</span></div>
+                <div class="group-title"><span class="badge badge-success">Электронная почта - Россия</span></div>
                 <ul>
                   <li>
                     <div class="icon mail yandex ua"></div><a href="https://mail.yandex.ua/" target="_blank">mail.yandex.ua</a>
@@ -194,7 +192,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Электронная почта - Украина*</span></div>
+                <div class="group-title"><span class="badge badge-success">Электронная почта - Украина</span></div>
                 <ul>
                   <li>
                     <div class="icon mail ukr net"></div><a href="https://accounts.ukr.net/login" target="_blank">mail.ukr.net</a>
@@ -216,13 +214,12 @@
                   </li>
                   <li>
                     <div class="icon mail ex ua"></div><a href="https://mail.ex.ua/" target="_blank">mail.ex.ua</a>
+                    <!-- тут реклама от ГУГЛ - 3 колонки 32050+-->
                   </li>
                   <li>
-                    <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                  </li>
-                  <li><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="1111124042"></ins></li>
-                  <li>
+                    <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="1111124042"></ins>
                     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+                    <!-- тут реклама от ГУГЛ-->
                   </li>
                 </ul>
               </div>
