--- a/city.html
+++ b/city.html
@@ -73,7 +73,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Новомиргород*</span></div>
+                <div class="group-title"><span class="badge badge-success">Новомиргород</span></div>
                 <ul>
                   <li>
                     <div class="icon google maps"></div><a href="https://www.google.com/maps/place/%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4,+%D0%9A%D1%96%D1%80%D0%BE%D0%B2%D0%BE%D0%B3%D1%80%D0%B0%D0%B4%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@48.7981251,31.5591162,12z/data=!3m1!4b1!4m5!3m4!1s0x40d1a5b80c2c8cdf:0x27e2a212ccc7175c!8m2!3d48.7907203!4d31.6582633" target="_blank">Карта Новомиргорода</a>
@@ -153,7 +153,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Городок-2*</span></div>
+                <div class="group-title"><span class="badge badge-success">Городок-2</span></div>
                 <ul>
                   <li>
                     <div class="icon google"></div><a href="https://www.google.com.ua/" target="_blank">здесь будет инфо по городу №4</a>
@@ -163,7 +163,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Городок-3*</span></div>
+                <div class="group-title"><span class="badge badge-success">Городок-3</span></div>
                 <ul>
                   <li>
                     <div class="icon google"></div><a href="https://www.google.com.ua/" target="_blank">здесь будет инфо по городу №5</a>
