--- a/others.html
+++ b/others.html
@@ -73,7 +73,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Анализатор ИНТЕРНЕТ соединения*</span></div>
+                <div class="group-title"><span class="badge badge-success">Анализатор ИНТЕРНЕТ соединения</span></div>
                 <ul>
                   <li>
                     <div class="icon speed1"></div><a href="http://speedtest.dc.ukrtelecom.ua/" target="_blank">speedtest.dc.ukrtelecom.ua</a>
@@ -96,7 +96,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Поисковики*</span></div>
+                <div class="group-title"><span class="badge badge-success">Поисковики</span></div>
                 <ul>
                   <li>
                     <div class="icon google"></div><a href="https://www.google.com.ua/" target="_blank">Google</a>
@@ -143,7 +143,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Переводчики*</span></div>
+                <div class="group-title"><span class="badge badge-success">Переводчики</span></div>
                 <ul>
                   <li>
                     <div class="icon translate google com ua"></div><a href="https://translate.google.com.ua/" target="_blank">Переводчик Google</a>
@@ -154,7 +154,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Граматика*</span></div>
+                <div class="group-title"><span class="badge badge-success">Граматика</span></div>
                 <ul>
                   <li>
                     <div class="icon languagetool org"></div><a href="https://languagetool.org/uk/" target="_blank">Граматика от languagetool</a>
@@ -164,7 +164,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">*Торрент-программы*</span></div>
+                <div class="group-title"><span class="badge badge-warning">Торрент-программы</span></div>
                 <ul>
                   <li>
                     <div class="icon utorrent com"></div><a href="https://www.utorrent.com/intl/ru/desktop/" target="_blank">Скачать utorrent</a>
@@ -175,7 +175,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Торрент-трекеры*</span></div>
+                <div class="group-title"><span class="badge badge-success">Торрент-трекеры</span></div>
                 <ul>
                   <li>
                     <div class="icon rutracker org"></div><a href="https://rutracker.org/" target="_blank">rutracker.org</a>
@@ -204,7 +204,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Карты*</span></div>
+                <div class="group-title"><span class="badge badge-success">Карты</span></div>
                 <ul>
                   <li>
                     <div class="icon google maps"></div><a href="https://www.google.com.ua/maps/" target="_blank">google_maps</a>
@@ -218,7 +218,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Интернет хранилище для ВАС (облако)*</span></div>
+                <div class="group-title"><span class="badge badge-success">Интернет хранилище для ВАС (облако)</span></div>
                 <ul>
                   <li>
                     <div class="icon mega nz"></div><a href="https://mega.nz/" target="_blank">mega.nz</a><span class="opisi">получите 50 ГБ</span>
@@ -234,7 +234,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Религия*</span></div>
+                <div class="group-title"><span class="badge badge-success">Религия</span></div>
                 <ul>
                   <li>
                     <div class="icon bibleonline ru"></div><a href="https://www.bibleonline.ru/" target="_blank">bibleonline.ru</a><span class="opisi">Библия онлайн</span>
@@ -254,7 +254,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">*Всякое*</span></div>
+                <div class="group-title"><span class="badge badge-success">Всякое</span></div>
                 <ul>
                   <li>
                     <div class="icon wikipedia org"></div><a href="https://ru.wikipedia.org/" target="_blank">wikipedia</a><span class="opisi">Свободная энциклопедия</span>
