--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link href="styles/hamburgers.min.css" rel="stylesheet">
     <link href="styles/animation.css" rel="stylesheet">
     <link href="styles/menu_button.css" rel="stylesheet">
-    <title>Главная</title>
+    <title>ZAKLADKI</title>
   </head>
   <body>
     <div class="container nav-container">
@@ -411,6 +411,14 @@
               <div class="group">
                 <div class="group-title"><a href="http://zakladki.at.ua/"><span class="badge badge-danger">Обнова в закладках: v.2019-03-13</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon a0pencil-1" title="Полезная информация" alt=""></div><a href="https://www.bbc.com/ukrainian/features-russian-41112484" target="_blank">ТВ-карта Украины.</a>
+                    <div class="icontooinfo a0repa3" title="Кто с чем подходит к выборам. Судьбу предстоящих президентских выборов все еще будет решать поддержка ключевых телеканалов страны, хотя интернет составит серьезную конкуренцию телевизору." alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0youtubeinform" title="Полезная информация" alt=""></div><a href="https://www.youtube.com/watch?v=A25RRbUh4Ws" target="_blank">Список виборців.</a>
+                    <div class="icontooinfo a0repa3" title="Дізнайся чи є ти в списках виборців? Непроєвибори! Переходь на сайт: drv.gov.ua" alt=""></div>
+                  </li>
                   <li>
                     <div class="icon florium ua"></div>
                     <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a>
