--- a/index.html
+++ b/index.html
@@ -412,26 +412,28 @@
                 <div class="group-title"><a href="http://zakladki.at.ua/"><span class="badge badge-danger">Обнова в закладках: v.2019-03-20</span></a></div>
                 <ul>
                   <li>
+                    <div class="icon a0info-opis5"></div>
                     <div class="icon a0pencil-1" title="Полезная информация" alt=""></div><a href="https://www.bbc.com/ukrainian/features-russian-41112484" target="_blank">ТВ-карта Украины.</a>
                     <div class="icontooinfo a0repa3" title="Кто с чем подходит к выборам. Судьбу предстоящих президентских выборов все еще будет решать поддержка ключевых телеканалов страны, хотя интернет составит серьезную конкуренцию телевизору." alt=""></div>
                   </li>
                   <li>
+                    <div class="icon a0info-opis5"></div>
                     <div class="icon a0youtubeinform" title="Полезная информация" alt=""></div><a href="https://www.youtube.com/watch?v=A25RRbUh4Ws" target="_blank">Список виборців.</a>
                     <div class="icontooinfo a0repa3" title="Дізнайся чи є ти в списках виборців? Непроєвибори! Переходь на сайт: drv.gov.ua" alt=""></div>
                   </li>
                   <li>
                     <div class="icon florium ua"></div>
-                    <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Флориум - Интернет магазин семян, саженцев садовых, комнатных растений и цветов в Украине." alt=""></div>
                   </li>
                   <li>
                     <div class="icon med-magazin ua"></div>
-                    <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c" target="_blank">med-magazin.ua`</a>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c" target="_blank">med-magazin.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине" alt=""></div>
                   </li>
                   <li>
                     <div class="icon master-plus com ua"></div>
-                    <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс" alt=""></div>
                   </li>
                   <!-- тут реклама от ГУГЛ-->
